Fix line wrapping in activity feed

--- a/app/assets/stylesheets/pages/user_profile.sass
+++ b/app/assets/stylesheets/pages/user_profile.sass
@@ -244,7 +244,7 @@
       color: rgba(255,255,255,0.9)
       font-weight: bold
       text-decoration: none
-      width: 150px
+      width: 170px
       flex-shrink: 0
 
       &:hover
